Fix matrix multiplication in parseTransformationMatrix()

Sequencing of a matrix multiplication seems to be erroneous, this may
lead to incorrect svg rendering under certain circumstances

Task-number: QTBUG-61568
Change-Id: Id8b6c425d4affde8c71faad455a63a87ef5e13a4
Reviewed-by: Andy Shaw <andy.shaw@qt.io>